GNOME Bugzilla – Bug 701701
Infinite loading when trying to change user password
Last modified: 2014-03-27 12:51:58 UTC
Trying to change the user password under certain circumstances does not work, system blocks in infinite loading. Steps : 1. Boot Tizen PC 2. Go to Settings - user settings 3. Press Unlock and enter root password 4. Press on password and from the drop down box chose "log in without a password". 5. Press change 6. Press again on password and and make sure "set a password now" is selected 7. Enter a password 8. Press change 9. Press again FAST on password to change it again (the password field under login options main user settings) 10. Enter the password again 11. Press change 12. Observe the "Please type your current password again" 13. Press close 14. Observe window did not close 15. Press change again 16. Observe the infinite loading The issue comes from the password mode. The password mode is not change immediately after setting the new password
Created attachment 246152 [details] [review] set the password mode to regular mode
Review of attachment 246152 [details] [review]: It looks good.
Review of attachment 246152 [details] [review]: The subject line is too long. Please explain the bug that it fixes, don't repeat in english what you did in code.
This patch got badly misapplied, resulting in the following dead code: switch (um->password_mode) { + act_user_set_password_mode (um->user, ACT_USER_PASSWORD_MODE_REGULAR); case ACT_USER_PASSWORD_MODE_REGULAR: Applying it correctly is also not desirable because it gives us a polkit dialog (due to hitting accountsservice) even in the case that we are going directly via passwd. Probably it makes sense to move this line down below the "is this my UID?" check for the change-by-other-user case.
Created attachment 272508 [details] [review] fix password changing Thanks for the comment. Proposed fix is working for me.
Review of attachment 272508 [details] [review]: Looks fine if testing shows it fixes the bug.
Review of attachment 272508 [details] [review]: This is what we did in Ubuntu and it fixed the issue we were having.
Comment on attachment 272508 [details] [review] fix password changing master: commit 5c7c83921a7ec3bb50dd0c061dfc52cea25f9218 gnome-3-10: commit d2074fad73b6574c0f7ca0e4ca4a2c58819c548c