user-accounts: Set the password mode to regular immediately

https://bugzilla.gnome.org/show_bug.cgi?id=701701